--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/templates/predict.html">Prediction</a>
+                <a class="nav-link" href="/predict.html">Prediction</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About Us</a>
@@ -51,12 +51,12 @@
             <div class="text">
               <h1 class="text-white">Where your dream <br>home predictions </span><span>come true!</span></h1>
               <p class="text-white">Unsure about house prices? Our advanced algorithms predict accurate prices and offer personalized recommendations for buyers and sellers.</p>
-              <p><a href="/templates/predict.html" class="btn btn-secondary me-2">Get Started</a><a href="#service" class="btn btn-white-outline">Learn More</a></p>
+              <p><a href="/predict.html" class="btn btn-secondary me-2">Get Started</a><a href="#service" class="btn btn-white-outline">Learn More</a></p>
             </div>
           </div>
           <div class="col-lg-7">
             <div class="home-1">
-              <img src="/static/images/home-3.png" alt="" class="img-fluid" />
+              <img src="/images/home-3.png" alt="" class="img-fluid" />
             </div>
           </div>
         </div>
@@ -72,7 +72,7 @@
         <div class="col">
           <div class="card h-100">
             <div class="card-body">
-              <img src="/static/images/service-1.png" class="img-fluid" alt="">
+              <img src="/images/service-1.png" class="img-fluid" alt="">
               <h5 class="card-title">Accurate Predictions</h5>
               <p class="card-text">Our machine learning models analyze various factors such as location, size, amenities, and market trends to provide you with precise house price predictions.</p>
             </div>
@@ -81,7 +81,7 @@
         <div class="col">
           <div class="card h-100">
             <div class="card-body">
-              <img src="/static/images/service-2.png" class="img-fluid" alt="">
+              <img src="/images/service-2.png" class="img-fluid" alt="">
               <h5 class="card-title">Custom Recommendations</h5>
               <p class="card-text">Based on your preferences and requirements, our system generates tailored recommendations to help you find the perfect home within your budget.</p>
             </div>
@@ -90,7 +90,7 @@
         <div class="col">
           <div class="card h-100">
             <div class="card-body">
-              <img src="/static/images/service-3.png" class="img-fluid" alt="">
+              <img src="/images/service-3.png" class="img-fluid" alt="">
               <h5 class="card-title">Market Insights</h5>
               <p class="card-text">Stay informed about the latest trends and developments in the real estate market through our insightful articles and analysis.</p>
             </div>
@@ -99,7 +99,7 @@
         <div class="col">
           <div class="card h-100">
             <div class="card-body">
-              <img src="/static/images/service-4.png" class="img-fluid" alt="">
+              <img src="/images/service-4.png" class="img-fluid" alt="">
               <h5 class="card-title">Interactive Interface</h5>
               <p class="card-text">ur user-friendly interface allows you to input specific details about the property you're interested in or explore recommended listings effortlessly.</p>
             </div>
@@ -108,7 +108,7 @@
         <div class="col">
           <div class="card h-100">
             <div class="card-body">
-              <img src="/static/images/service-5.png" class="img-fluid" alt="">
+              <img src="/images/service-5.png" class="img-fluid" alt="">
               <h5 class="card-title">Expert Guidance</h5>
               <p class="card-text">Our team of experienced real estate professionals and data scientists are dedicated to assisting you at every step of your home buying or selling journey.</p>
             </div>
@@ -117,7 +117,7 @@
         <div class="col">
           <div class="card h-100">
             <div class="card-body">
-              <img src="/static/images/service-6.png" class="img-fluid" alt="">
+              <img src="/images/service-6.png" class="img-fluid" alt="">
               <h5 class="card-title">Effortless Comparison</h5>
               <p class="card-text">Easily compare properties side by side, empowering you to make informed decisions and choose the best option for your needs and preferences.</p>
             </div>
@@ -139,7 +139,7 @@
 
       <div class="row my-5 g-5 justify-content-around align-items-center">
         <div class="col-6 col-lg-6">
-          <img src="/static/images/home-2.png" class="img-fluid home-2" alt="">
+          <img src="/images/home-2.png" class="img-fluid home-2" alt="">
         </div>
 
         <div class="col-lg-6">
@@ -220,7 +220,7 @@
             <div class="col">
               <div class="card h-100">
                 <div class="card-body">
-                  <img src="/static/images/wcu-1.png" class="img-fluid" alt="">
+                  <img src="/images/wcu-1.png" class="img-fluid" alt="">
                   <h5 class="card-title">Reliability</h5>
                   <p class="card-text">Our algorithms are rigorously tested on extensive datasets for accurate price predictions.</p>
                 </div>
@@ -229,7 +229,7 @@
             <div class="col">
               <div class="card h-100">
                 <div class="card-body card-2">
-                  <img src="/static/images/wcu-3.png" class="img-fluid" alt="">
+                  <img src="/images/wcu-3.png" class="img-fluid" alt="">
                   <h5 class="card-title">Transparency</h5>
                   <p class="card-text">We offer detailed explanations behind predictions, empowering informed decisions.</p>
                 </div>
@@ -238,7 +238,7 @@
             <div class="col">
               <div class="card h-100">
                 <div class="card-body card-3">
-                  <img src="/static/images/wcu-2.png" class="img-fluid" alt="">
+                  <img src="/images/wcu-2.png" class="img-fluid" alt="">
                   <h5 class="card-title">Satisfaction</h5>
                   <p class="card-text">Dedicated to exceptional service, we guide you through real estate, prioritizing satisfaction.</p>
                 </div>
@@ -297,8 +297,8 @@
        </div>
       </footer>
 
-    <script src="/static/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
 
-    <script src="/static/js/index.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
